jEdit 4.5 version history
       (changes since jEdit 4.4)
:encoding=UTF-8:

{{{ Version 4.5pre1

Thanks to Matthieu Casanova, cy6erGn0m, Bad Sector, jclopes, Dale Anson, Damien Radtke and Matthew Gilbert for contributing to
this release

{{{ API Changes
-New method TextArea.getVisibleLineText(screenLine) and
 TextArea.getVisibleLineSegment() that returns
 the visible part of the given line (Matthieu Casanova)

-API made private:
 FileVFS.modified
 (Matthieu Casanova)
 
-Removed Deprecated apis :
 JEditTextArea.getSelectionStart()
 JEditTextArea.getSelectionStart(int line)
 JEditTextArea.getSelectionStartLine()
 JEditTextArea.setSelectionStart(int selectionStart)
 JEditTextArea.getSelectionEnd()
 JEditTextArea.getSelectionEnd(int line)
 JEditTextArea.getSelectionEndLine()
 JEditTextArea.setSelectionEnd(int selectionEnd)
 JEditTextArea.select(int start, int end)
 JEditTextArea.select(int start, int end, boolean doElectricScroll)
 JEditTextArea.isSelectionRectangular()
 TextAreaPainter.setAntiAliasEnabled(boolean isEnabled)
 TextAreaPainter.isAntiAliasEnabled()
 FoldHandler.SERVICE
 Buffer.addBufferChangeListener(BufferChangeListener listener, int priority)
 Buffer.putProperty(Object name, Object value)
 Buffer.putBooleanProperty(String name, boolean value)
 Buffer.markTokens(int lineIndex)
 Buffer.TokenList
 Buffer.getMarkersPath(VFS vfs)
 Buffer.insertString(int offset, String str, AttributeSet attr)
 Buffer.editSyntaxStyle(JEditTextArea textArea)
 BufferIORequest.UTF8_MAGIC_1
 BufferIORequest.UTF8_MAGIC_2
 BufferIORequest.UTF8_MAGIC_3
 BufferIORequest.UNICODE_MAGIC_1
 BufferIORequest.UNICODE_MAGIC_2
 BufferIORequest.XML_PI_LENGTH
 JEditBuffer.indentLine(int lineIndex, boolean canIncreaseIndent, boolean canDecreaseIndent)
 JEditBuffer.isElectricKey(char ch)
 MiscUtilities.UTF_8_Y
 MiscUtilities.getFileParent(String path)
 MiscUtilities.getFileProtocol(String url)
 MiscUtilities.moveFile(File source, File dest)